ingress_ns/canary-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-canary 
spec:
  type: ExternalName
  externalName: frontend.canary.svc.cluster.local
